--- a/src/docs/asciidoc/login-user.adoc
+++ b/src/docs/asciidoc/login-user.adoc
@@ -9,30 +9,29 @@ endif::[]
 :sectlinks:
 :site-url: /build/asciidoc/html5/
 
-= 카테고리 추가
+= 로그인
 
 == Request
 
 === [Request CURL]
-include::{snippets}/addCategory/curl-request.adoc[]
+include::{snippets}/loginUser/curl-request.adoc[]
 
 === [Request]
-include::{snippets}/addCategory/http-request.adoc[]
+include::{snippets}/loginUser/http-request.adoc[]
 
 === [Request Body]
-include::{snippets}/addCategory/request-body.adoc[]
+include::{snippets}/loginUser/request-body.adoc[]
 
 === [Request Fields]
-include::{snippets}/addCategory/request-fields.adoc[]
+include::{snippets}/loginUser/request-fields.adoc[]
 
 == Response
 
 === [Response]
-include::{snippets}/addCategory/http-response.adoc[]
+include::{snippets}/loginUser/http-response.adoc[]
 
 === [Response Body]
-include::{snippets}/addCategory/response-body.adoc[]
+include::{snippets}/loginUser/response-body.adoc[]
 
 === [Response Fields]
-```
-```
+include::{snippets}/loginUser/response-fields.adoc[]
